# dank-dns

./: .gitignore  CMakeLists.txt  Main.cpp  ParseDNS.cpp  README.md  SipHash.cpp  StringHash.h
betterC/: .gitignore  Makefile  configure
betterC/include/: db.h  dns.h  optparser.h  packet.h  packetHandle.h  protocol.h  util.h  worker.h
betterC/src/: dns.c  main.c  packetHandle.c  protocol.c  worker.c
betterC/tests/: Makefile  dnsHeader_test.c  test.c
cpp/: .gitignore  README.md
cpp/include/: Config.h  ParseDNS.h  SipHash.h  nameser.h
js/: config.js  createIndex.js  generateRegions.js  package.json  pcap.js  regions.json  worker.js
js/models/: DNS.js
js/query/: qps.js  topHost.js  topRequest.js  utils.js
js/query/tools/: validTLDs.txt
js/tools/: createIndex.js  generateRegions.js
multiC/: .gitignore  Makefile  README.md  config.h
multiC/include/: db.h  dns.h  util.h  worker.h
multiC/src/: db.c  dns.c  main.c  optparser.c  worker.c
multiC/tests/: .gitignore  Makefile  dnsHeader_test.c  mongo_test.c  sample_test.c  test.c  test.h
query/: config.js  package.json  qps.js  script.sh  topHost.js  topRequest.js  utils.js
query/tools/: generateValidTLDs.js  validTLDs.json
src/: Main.cpp  ParseDNS.cpp
